# advent-of-code

./: .gitignore  GUIDE.md  Makefile  README.md  aoc.py  aoc.sh  fetch-input  fetch-input.sh
2018/: aoc
2018/day/: 01.lua
2018/days/: 1.lua  2.lua  3.lua
2018/src/days/: 1.lua
2018/src/utils/: filter.lua  find.lua  init.lua  iterateLines.lua  map.lua  split.lua
2018/utils/: init.lua
2020/: README.md  aoc-2020.sh  ruff.toml
2020/src/arzcbnh/aoc/: __init__.py  cli.py
2020/src/arzcbnh/aoc/day/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2020/src/arzcbnh/aoc/util/: cache.py
2021/: .gitignore  Makefile  README.md  compile.sh  meson.build  test.sh
2021/old/: 19.c  20.c  21.c  22.c  24.c  25.c
2021/src/: 02.c  03.c  04.c  05.c  06.c  07.c  08.c  09.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  aoc.c
2021/subprojects/c-vector/: meson.build
2021/subprojects/getopt/: meson.build
2021/subprojects/sds/: README.md  meson.build
2023/: .gitignore  README.md  cli.ts  eslint.config.js  index.ts  package-lock.json  package.json  prettier.config.js  test.ts  tsconfig.json
2023/day/: 1.ts  2.ts
2023/days/: 1.ts  10.ts  2.ts  3.ts  4.ts  5.ts  6.ts  7.ts  8.ts  9.ts
2023/src/: cli.ts  index.ts
2023/src/days/: 1.ts  11.ts  12.ts  13.ts  14.ts  15.ts  16.ts  17.ts  2.ts  5.ts  6.ts  8.ts
2023/src/utils/: BinaryHeap.ts  Graph.ts  arrayx.ts  biheap.ts  fetchInput.ts
2023/tests/: answers.json  test.ts
2023/utils/: arrayx.ts  convertToEnum.ts  fetchInput.ts  index.ts  stringx.ts
2024/: .gitignore  README.md  pom.xml  run
2024/src/main/java/me/arzcbnh/adventofcode/: AdventOfCode.java
2024/src/main/java/me/arzcbnh/adventofcode/day/: Answer.java  Solver.java  SolverFactory.java  (+1 more)
include/: aoc.h
src/: 01.c  03.c  aoc.c
(+48 files in other folders)
